<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/nav_home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/home"
        android:textColor="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/nav_options_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/options"
        android:textColor="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/nav_alerts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/alerts"
        android:textColor="?attr/colorOnBackground" />
</LinearLayout>
